code: fix the real-time chart 1px misalignment, why not

--- a/src/components/live-space-detail/_styles.scss
+++ b/src/components/live-space-detail/_styles.scss
@@ -57,6 +57,10 @@
   justify-content: center;
 }
 
+.live-space-detail-real-time-chart {
+  height: 160px;
+}
+
 // Some hacks to get the real time chart to work in this larger form-factor
 // 1. Remove border (including border-radius)
 // 2. Hide labels above and below chart. Currently, I'm rendering my own labels so that I can
